--- a/shopping-mall/src/styles/product.scss
+++ b/shopping-mall/src/styles/product.scss
@@ -15,3 +15,11 @@
   width: 100%;
   height: 250px;
 }
+
+.product-item-container {
+  display: flex;
+  max-width: 500px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
